fix(home): photo alignment

--- a/static/scss/components/_footer.scss
+++ b/static/scss/components/_footer.scss
@@ -1,39 +1,40 @@
 .footer {
-    background-image: var(--gradient-1);
+  background-image: var(--gradient-1);
+  text-align: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+  &__container {
+    position: relative;
     text-align: center;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    vertical-align: bottom;
+    padding-top: 1rem;
+    flex: 1 50%;
+  }
 
-    &__container {
-        text-align: center;
-        vertical-align: bottom;
-        padding-top: 1rem;
-        flex: 1 50%;
-    }
+  &__link:hover {
+    text-decoration: underline;
+  }
 
-    &__link:hover {
-        text-decoration: underline;
-    }
+  &__logo {
+    height: 3em;
+  }
 
-    &__logo {
-        height: 4em;
-    }
+  &__fa-logo {
+    font-size: 3em;
+    color: #ffffff;
+  }
 
-    &__fa-logo {
-        font-size: 2.5em;
-        color: #ffffff;
-    }
-
-    &__text {
-        color: #ffffff;
-    }
+  &__text {
+    color: #ffffff;
+  }
 }
 
 @media all and (min-width: 720px) {
-    .footer {
-        &__container {
-            flex: 4;
-        }
+  .footer {
+    &__container {
+      flex: 4;
     }
+  }
 }
